--- a/rock-paper-scissors.css
+++ b/rock-paper-scissors.css
@@ -1,3 +1,41 @@
 .results{
     font-size: larger;
 }
+
+.container{
+    display: flex;
+    background-color: gainsboro;
+    border: 2px solid black;
+    justify-content: center;
+    align-items: center;
+    height: 200px;
+    gap: 10px;
+}
+
+#rock, #paper, #scissors{
+    height: 70px;
+    width: 150px;
+    border-radius: 130px;
+    background-color: white;
+    font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-size: x-large;
+}
+
+
+#rock:hover, #paper:hover, #scissors:hover {
+    background-color: whitesmoke;
+    transition: 0.5s;
+}
+
+.results{
+    display: flex;
+    flex-direction: column;
+    height: 500px;
+    flex-grow: 1;
+    align-items: center;
+    
+
+}
+
+
+ 
